Fikser ekskveringsprioritet for filtre + cleanup (#1997)